--- a/app/src/main/res/layout/match_details_layout.xml
+++ b/app/src/main/res/layout/match_details_layout.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/_300sdp"
     android:padding="@dimen/_16sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
+    android:orientation="vertical"
     app:cardCornerRadius="@dimen/_20sdp"
+    android:background="@color/purple_200"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -287,4 +289,4 @@
             />
     </LinearLayout>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
