--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="winner_color">#54BC58</color>
+    <color name="loser_color">#DD3434</color>
+    <color name="same_result_color">#A58D14</color>
     <color name="text_color">#DF1E1E</color>
 </resources>
